--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,14 +2,33 @@
 title: Le Wagon - Middleman
 ---
 
-<div id="home">
-  <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
-    <p>
-      Middleman is now running!
-    </p>
-    <p class="about">
-      <%= link_to "More about this template", "about.html" %>
-    </p>
+
+<%= partial "banner" %>
+
+
+<div class="container text-center">
+  <div class="dashboard">
+    <%= partial "cards" %>
   </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
