Added CSS for colors and fonts to over-ride Bootstrap theme

--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
+$red: #E45306;
+$blue: #47C3F9;
 $yellow: #FDB631;
 $orange: #E67E22;
-$green: #32B796;
-$gray: #000000;
+$green: #5EC86E;
+$gray: #9DA09D;
 $light-gray: #F4F4F4;
