--- a/source/stylesheets/config/_bootstrap_variables.scss
+++ b/source/stylesheets/config/_bootstrap_variables.scss
@@ -10,12 +10,12 @@ $body-bg:                 $light-gray;
 $font-size-base: 18px;
 
 // Colors
-$gray-base:       $gray;
-$brand-primary:   $blue;
+$gray-base:       $blue;
+$brand-primary:   $red;
 $brand-success:   $green;
-$brand-info:      $yellow;
+$brand-info:      $gray;
 $brand-danger:    $red;
-$brand-warning:   $orange;
+$brand-warning:   $yellow;
 
 // Buttons & inputs' radius
 $border-radius-base:  2px;
@@ -23,3 +23,4 @@ $border-radius-large: 2px;
 $border-radius-small: 2px;
 
 // Override other variables below!
+
